Bug 527086: [java9] Support Java 9 - make OTJLD tests runnable on JDK9